# tower-jump-detection

./: README.md  compose.yml  tower_jumps_analysis_result.csv
client/: .dockerignore  Dockerfile  README.md  nginx.conf  package.json
client/src/: App.jsx  config.js
client/src/components/: ConfidenceIndicator.jsx  Dashboard.jsx  FileUpload.jsx  LocationMap.jsx  ResultsTable.jsx
server/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  data_processor.py  pyproject.toml  tower_jump_detector.py
server/tests/: test_data_processor.py  test_tower_jump_detector.py
