[project]
name = "tower-jumps-server"
version = "0.1.0"
description = "Tower Jumps Detection API Server"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-cors",
    "pandas",
    "numpy",
    "geopy",
    "python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "black>=25.9.0",
]
